samir wagle update

--- a/index.html
+++ b/index.html
@@ -210,16 +210,12 @@
         <section class="about-text">
           <p>
             I'm a Computer Engineering Student at Kathmandu University with experience in backend of Web Designing and Android App Development. I love to code and design.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            The work of engineer is to solve a real world problem. I am always interested in this.
+            Turning complex problems into simple, beautiful and intuitive designs.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            This is my simple personal portfolio website.
           </p>
         </section>
 
